cmake_minimum_required(VERSION 3.5)
project("tcpbuffer")
include(CTest)
enable_testing()
include_directories(/opt/homebrew/Cellar/cunit/2.1-3/include)
link_directories(/opt/homebrew/Cellar/cunit/2.1-3/lib)
add_executable(tcp_buffer_test tcp_buffer.c tcp_buffer_test.c)
target_link_libraries(tcp_buffer_test cunit)
add_test(NAME BufferTest COMMAND tcp_buffer_test)